hotfix/исправить баг шапки при прокрутке

--- a/src/pug/category.pug
+++ b/src/pug/category.pug
@@ -4,7 +4,7 @@ block meta
   - var title = 'Категория каталога (автотовары)';
 
 block filter
-  .header__footer
+  .togglebar
     button.aside-toggler.flex-grow-1.justify-content-center.px-3.py-2(type="button" data-target="#settings")
       +icon('settings', 'aside-toggler__icon h3 mr-2')
       span.pointer-events-none Подобрать по VIN
