--- a/src/pug/results-auto.pug
+++ b/src/pug/results-auto.pug
@@ -5,7 +5,7 @@ block meta
   - var h1 = 'Купить шины для HYUNDAI Accent 2000-2005 LC Sedan 1.3 в Ростове-на-Дону';
 
 block filter
-  .header__footer
+  .togglebar
     button.aside-toggler.flex-grow-1.aside-toggler_btn_group.px-3.py-2(type="button" data-target="#settings")
       +icon('car','aside-toggler__icon h3 mr-2')
       span.aside-toggler__title.h4.text-nowrap Подбор по авто
