--- a/src/pug/results.pug
+++ b/src/pug/results.pug
@@ -5,7 +5,7 @@ block meta
   - var h1 = 'Поиск по запросу «Нокиан»';
 
 block filter
-  .header__footer
+  .togglebar
     button.aside-toggler.flex-grow-1.justify-content-center.px-3.py-2(type="button" data-target="#filter")
       +icon('filter', 'aside-toggler__icon h3 mr-2')
       span.pointer-events-none
