--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -55,6 +55,7 @@
 @import 'tpl/search';
 @import 'tpl/swiper';
 @import 'tpl/header';
+@import 'tpl/togglebar';
 @import 'tpl/section';
 @import 'tpl/content';
 @import 'tpl/feature';
