--- a/src/pug/filter-motowheels.pug
+++ b/src/pug/filter-motowheels.pug
@@ -4,7 +4,7 @@ block meta
   - var title = 'Подбор мотошин';
 
 block filter
-  .header__footer
+  .togglebar
     button.aside-toggler.flex-grow-1.justify-content-center.px-3.py-2(type="button" data-target="#filter")
       +icon('filter', 'aside-toggler__icon h3 mr-2')
       span.pointer-events-none
