--- a/src/pug/subcategory-tires-list.pug
+++ b/src/pug/subcategory-tires-list.pug
@@ -4,7 +4,7 @@ block meta
   - var title = 'Подкатегория каталога (серия бренда шин)';
 
 block filter
-  .header__footer
+  .togglebar
     button.aside-toggler.flex-grow-1.justify-content-center.px-3.py-2(type="button" data-target="#filter")
       +icon('filter', 'aside-toggler__icon h3 mr-2')
       span.pointer-events-none
