--- a/src/pug/subcategory.pug
+++ b/src/pug/subcategory.pug
@@ -4,7 +4,7 @@ block meta
   - var title = 'Подкатегория каталога (автотовары)';
 
 block filter
-  .header__footer
+  .togglebar
     button.aside-toggler.flex-grow-1.aside-toggler_btn_group.px-3.py-2(type="button" data-target="#details")
       +icon('detail','aside-toggler__icon h3 mr-2')
       span.aside-toggler__title.h4.text-nowrap
