hotfix/добавить стили stretched-link

--- a/src/pug/cart.pug
+++ b/src/pug/cart.pug
@@ -29,10 +29,9 @@ block wrapper
       .heading__col.heading__col_cart-summ.h6.mb-2 Сумма
     form.table-row.table-row_cart.box-shadow.border-radius.pos-rel.py-3.py-md-1.px-3.mb-md-2.mb-3.js-cart(action="#")
       .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
-        a.d-block(href="#")
-          +img('content/cards/card-1.jpg')
+        +img('content/cards/card-1.jpg')
       .table-row__col.table-row__col_cart-title.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
-        a.table-row__title.h5(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
+        a.table-row__title.h5.stretched-link(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
       .table-row__col.table-row__col_cart-price.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
         .d-block.d-md-none.mr-1 Цена:
         span.d-flex.h3
@@ -56,10 +55,9 @@ block wrapper
           +icon('close')
     form.table-row.table-row_cart.box-shadow.border-radius.pos-rel.py-3.py-md-1.px-3.mb-md-2.mb-3.js-cart(action="#")
       .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
-        a.d-block(href="#")
-          +img('content/cards/card-1.jpg')
+        +img('content/cards/card-1.jpg')
       .table-row__col.table-row__col_cart-title.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
-        a.table-row__title.h5(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
+        a.table-row__title.h5.stretched-link(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
       .table-row__col.table-row__col_cart-price.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
         .d-block.d-md-none.mr-1 Цена:
         span.d-flex.h3
@@ -83,10 +81,9 @@ block wrapper
           +icon('close')
     form.table-row.table-row_cart.box-shadow.border-radius.pos-rel.py-3.py-md-1.px-3.mb-4.js-cart(action="#")
       .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
-        a.d-block(href="#")
-          +img('content/cards/card-1.jpg')
+        +img('content/cards/card-1.jpg')
       .table-row__col.table-row__col_cart-title.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
-        a.table-row__title.h5(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
+        a.table-row__title.h5.stretched-link(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
       .table-row__col.table-row__col_cart-price.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
         .d-block.d-md-none.mr-1 Цена:
         span.d-flex.h3
