--- a/src/pug/comparing.pug
+++ b/src/pug/comparing.pug
@@ -37,7 +37,7 @@ block wrapper
                 span.form__label-title Показать только различия
             .col-xl-2.col-lg-3.col-md-4.col-3.d-flex.justify-content-end.mb-4
               button.button.button_nobg.h5.p-0(type="button")
-                +icon('trash','btn__icon h4 color-theme-brand mr-md-2')
+                +icon('trash','button__icon h4 color-theme-brand mr-md-2')
                 span.d-md-block.d-none Очистить список
           .slides.slides_carousel.swiper-container.pt-1.pb-4
             +slidesNav()
@@ -61,7 +61,7 @@ block wrapper
                 span.form__label-title Показать только различия
             .col-xl-2.col-lg-3.col-md-4.col-3.d-flex.justify-content-end.mb-4
               button.button.button_nobg.h5.p-0(type="button")
-                +icon('trash','btn__icon h4 color-theme-brand mr-md-2')
+                +icon('trash','button__icon h4 color-theme-brand mr-md-2')
                 span.d-md-block.d-none Очистить список
           .slides.slides_carousel.swiper-container.pt-1.pb-4
             +slidesNav()
