--- a/src/pug/ui.pug
+++ b/src/pug/ui.pug
@@ -82,11 +82,11 @@ block wrapper
       button.button(type="button") Кнопка со стилями по умолчанию
     .mb-3
       button.button(type="button")
-        +icon('trash','btn__icon h3 mr-2')
+        +icon('trash','button__icon h3 mr-2')
         | Кнопка с иконкой
     .mb-3
       button.button.button_nobg(type="button")
-        +icon('trash','btn__icon h3 color-theme-brand mr-2')
+        +icon('trash','button__icon h3 color-theme-brand mr-2')
         | Кнопка без фона с иконкой
     .mb-3
       button.button.button_nobg(type="button") Кнопка без фона
