--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,10 +7,12 @@
 @import '~bootstrap/scss/images';
 @import '~bootstrap/scss/transitions';
 @import '~bootstrap/scss/tooltip';
+//@import '~bootstrap/scss/utilities';
 @import '~bootstrap/scss/utilities/text';
 @import '~bootstrap/scss/utilities/embed';
 @import '~bootstrap/scss/utilities/borders';
 @import '~bootstrap/scss/utilities/display';
+@import '~bootstrap/scss/utilities/stretched-link';
 
 /* base */
 @import 'base/fonts';
