hotfix/установить вызов модального окна входа

--- a/src/pug/tpl/header.pug
+++ b/src/pug/tpl/header.pug
@@ -312,7 +312,7 @@ header.header.header_bottom
               .header__nav-item.header__nav-item_col.d-flex.flex-column.text-center.text-nowrap(data-toggle="modal" data-target="#auth-phone")
                 .header__nav-icon.d-flex.flex-column.align-items-center.justify-content-center
                   +icon('user')
-                span.header__btn-title.button-unstyled(data-toggle="modal" data-target="#reg")  Вход | регистрация
+                span.header__btn-title.button-unstyled  Вход | регистрация
 
           .pos-rel
             a.header__btn.header__btn_inverse(href="#")
