support/добавить stretched-link ссылкам товаров в списке заказа

--- a/src/pug/checkout.pug
+++ b/src/pug/checkout.pug
@@ -60,30 +60,27 @@ block wrapper
             .d-flex.align-items-center.mb-3
               .h4.mr-3 Товары в заказе
               .h5.text-nowrap.rounded-pill.color-theme-white.bg-theme-brand.px-2 3 шт.
-            .row.align-items-center.mb-2
+            .row.align-items-center.pos-rel.mb-2
               .col-4
-                a.d-block(href="#")
-                  +img('content/cards/card-1.jpg')
-              .col-8
-                a.h5.d-block(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
+                +img('content/cards/card-1.jpg')
+              .col-8.pos-stat
+                a.h5.d-block.stretched-link(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
                 span.d-flex.h3
                   span.font-weight-bold.mr-1.text-nowrap.js-price 7 337.12
                   | ₽
-            .row.align-items-center.mb-2
+            .row.align-items-center.pos-rel.mb-2
               .col-4
-                a.d-block(href="#")
-                  +img('content/cards/card-1.jpg')
-              .col-8
-                a.h5.d-block(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
+                +img('content/cards/card-1.jpg')
+              .col-8.pos-stat
+                a.h5.d-block.stretched-link(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
                 span.d-flex.h3
                   span.font-weight-bold.mr-1.text-nowrap.js-price 7 337.12
                   | ₽
-            .row.align-items-center
+            .row.align-items-center.pos-rel
               .col-4
-                a.d-block(href="#")
-                  +img('content/cards/card-1.jpg')
-              .col-8
-                a.h5.d-block(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
+                +img('content/cards/card-1.jpg')
+              .col-8.pos-stat
+                a.h5.d-block.stretched-link(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
                 span.d-flex.h3
                   span.font-weight-bold.mr-1.text-nowrap.js-price 7 337.12
                   | ₽
