--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -5,7 +5,8 @@ $font-size_default: .875rem;
 $line-height_default: 1;
 $line-height_content: 1.4;
 
-$breakpoint__custom: 1366px;
+$breakpoint__custom_lg: 1366px;
+$breakpoint__custom_xs: 375px;
 
 $color__text_default: #525252;
 
