--- a/src/scss/tpl/_header.scss
+++ b/src/scss/tpl/_header.scss
@@ -26,14 +26,6 @@
       }
     }
 
-    .header__col {
-      @include media-breakpoint-down(md) {
-        @include fw(auto);
-        width: auto;
-        max-width: initial;
-      }
-    }
-
     .header__col_search {
       @include media-breakpoint-down(sm) {
         @include fw(100%);
@@ -55,12 +47,6 @@
         right: 0;
       }
     }
-
-    .logo {
-      @include media-breakpoint-down(md) {
-        display: none;
-      }
-    }
   }
 }
 
@@ -71,8 +57,12 @@
     @include py(1.25rem,0);
   }
 
-  @include media-breakpoint-down(md) {
+  @include media-breakpoint-only(md) {
     @include py(1rem,0);
+  }
+
+  @include media-breakpoint-down(sm) {
+    @include py(0.625rem,0);
   }
 }
 
@@ -80,8 +70,12 @@
   &.header__col_logo {
     @extend %flex-item;
 
-    @include media-breakpoint-down(md) {
-      justify-content: center;
+    @include media-breakpoint-up(md) {
+      margin-bottom: 1rem;
+    }
+
+    @include media-breakpoint-down(sm) {
+      margin-bottom: 0.625rem;
     }
   }
 
@@ -112,13 +106,13 @@
   @extend %btn-default;
   transition: all .3s ease;
 
-  &.header__nav-item_col {
+  &.header__nav-item_type_col {
     &:hover {
       .header__nav-icon {
         background: $color__light;
       }
 
-      .header__btn-title {
+      .header__nav-caption {
         color: $color__brand;
       }
     }
@@ -138,7 +132,7 @@
   }
 }
 
-.header__btn-title {
+.header__nav-caption {
   color: $color__link;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -146,6 +140,13 @@
 
   @include media-breakpoint-up(lg) {
     display: block;
+  }
+
+  @include media-breakpoint-down(md) {
+  }
+
+  @media (max-width: $breakpoint__custom_xs - 1) {
+    display: none;
   }
 }
 
@@ -218,15 +219,19 @@
   }
 }
 
-.header__btn-title {
-  @include media-breakpoint-down(md) {
-    display: none;
-  }
-}
-
 .header__btn-caption {
   width: 0;
   overflow: hidden;
+}
+
+.header__btn-title {
+  display: block;
+  pointer-events: none;
+  margin: 0 0 0 .5rem;
+
+  @media (max-width:$breakpoint__custom_xs - 1) {
+    display: none;
+  }
 }
 
 .header__cart-data {
@@ -371,4 +376,16 @@
   @include fw(30px);
   overflow: hidden;
   border-radius: .5rem;
+}
+
+.header__panel {
+  @include media-breakpoint-down(md) {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    padding: 1.125rem 1rem;
+    background-color: #fff;
+    box-shadow: 2px 2px 8px 0 rgba(0, 0, 0, 0.16);
+  }
 }
