--- a/src/scss/tpl/_category.scss
+++ b/src/scss/tpl/_category.scss
@@ -13,7 +13,7 @@
     grid-template-columns: repeat(4,1fr);
   }
 
-  @media (min-width:$breakpoint__custom) {
+  @media (min-width:$breakpoint__custom_lg) {
     grid-template-columns: repeat(5,1fr);
   }
 
